merge duplicated index visible methods